# exercism-rust

./: .gitignore  Cargo.toml
acronym/src/: lib.rs
all-your-base/src/: lib.rs
allergies/src/: lib.rs
anagram/src/: lib.rs
armstrong-numbers/src/: lib.rs
assembly-line/src/: lib.rs
beer-song/src/: lib.rs
binary-search/src/: lib.rs
bob/src/: lib.rs
bowling/src/: lib.rs
clock/src/: lib.rs
collatz-conjecture/src/: lib.rs
custom-set/src/: lib.rs
etl/src/: lib.rs
gigasecond/src/: lib.rs
grade-school/src/: lib.rs
grains/src/: lib.rs
hamming/src/: lib.rs
health-statistics/src/: lib.rs
high-scores/src/: lib.rs
isbn-verifier/src/: lib.rs
isogram/src/: lib.rs
low-power-embedded-game/src/: lib.rs
luhn/src/: lib.rs
macros/src/: lib.rs
magazine-cutout/src/: lib.rs
matching-brackets/src/: lib.rs
minesweeper/src/: lib.rs
nth-prime/src/: lib.rs
nucleotide-count/src/: lib.rs
pangram/src/: lib.rs
parallel-letter-frequency/src/: lib.rs
pascals-triangle/src/: lib.rs
perfect-numbers/src/: lib.rs
prime-factors/src/: lib.rs
protein-translation/src/: lib.rs
protein-translation/tests/: protein-translation.rs
proverb/src/: lib.rs
queen-attack/src/: lib.rs
raindrops/src/: lib.rs
react/: Cargo.toml
react/src/: lib.rs
resistor-color/src/: lib.rs
reverse-string/src/: lib.rs
rna-transcription/src/: lib.rs
robot-name/: Cargo.toml
robot-name/src/: lib.rs
robot-name/tests/: robot-name.rs
robot-simulator/src/: lib.rs
role-playing-game/src/: lib.rs
role-playing-game/tests/: role-playing-game.rs
rpn-calculator/src/: lib.rs
saddle-points/src/: lib.rs
sandbox/src/: main.rs
say/src/: lib.rs
series/src/: lib.rs
(+10 files in other folders)
