[workspace]
members = [
    "sandbox",
    "hello-world",
    "lucians-luscious-lasagna",
    "assembly-line",
    "semi-structured-logs",
    "resistor-color",
    "health-statistics",
    "low-power-embedded-game",
    "role-playing-game",
    "magazine-cutout",
    "short-fibonacci",
    "rpn-calculator",
    "reverse-string",
    "gigasecond",
    "clock",
    "anagram",
    "space-age",
    "macros",
    "sublist",
    "minesweeper",
    "luhn",
    "parallel-letter-frequency",
    "armstrong-numbers",
    "difference-of-squares",
    "grains",
    "leap",
    "nth-prime",
    "prime-factors",
    "proverb",
    "raindrops",
    "sum-of-multiples",
    "bob",
    "high-scores",
    "matching-brackets",
    "beer-song",
    "acronym",
    "all-your-base",
    "allergies",
    "bowling",
    "hamming",
    "grade-school",
    "isbn-verifier",
    "collatz-conjecture",
    "series",
    "isogram",
    "nucleotide-count"
]